src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Radius_Project_Type__c</fullName>
        <label>Radius Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>On Going</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UpComing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_Charge__c</fullName>
        <description>Registration % based on the agreement value</description>
        <label>Registration Charge %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Registration_Charges__c</fullName>
        <label>Registration Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMS_Text__c</fullName>
        <label>SMS Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S_Applicable_From_Floor__c</fullName>
        <label>Applicable From Floor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Floor_Rise_Rate__c</fullName>
        <description>Floor Rise [Per Sq Ft] rate applicable for the entire project</description>
        <inlineHelpText>Floor Rise [Per Sq Ft] rate applicable for the entire project</inlineHelpText>
        <label>Floor Rise Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Ready_Reckoner_Rate__c</fullName>
        <description>Ready reckoner rates defined by the government for this particular project location</description>
        <inlineHelpText>Ready reckoner rates defined by the government for this particular project location [Per Sq.ft Rate]</inlineHelpText>
        <label>Ready Reckoner Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Stamp_Duty__c</fullName>
        <defaultValue>5</defaultValue>
        <description>% of the agreement value</description>
        <inlineHelpText>enter the SD% [calculated based on the agreement value]</inlineHelpText>
        <label>Stamp Duty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>S_VAT__c</fullName>
        <defaultValue>1</defaultValue>
        <description>enter the VAT%, calculated based on the agreement value</description>
        <inlineHelpText>enter the VAT%, calculated based on the agreement value</inlineHelpText>
        <label>VAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>S_View1_PLC__c</fullName>
        <description>Per sq ft PLC rate applicable for View 1</description>
        <inlineHelpText>Per sq ft PLC rate applicable for View 1</inlineHelpText>
        <label>View1 PLC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_View2_PLC__c</fullName>
        <description>Per sq ft PLC rate applicable for View 2</description>
        <inlineHelpText>Per sq ft PLC rate applicable for View 2</inlineHelpText>
        <label>View2 PLC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_View3_PLC__c</fullName>
        <description>Per sq ft PLC rate applicable for View 1</description>
        <inlineHelpText>Per sq ft PLC rate applicable for View 1</inlineHelpText>
        <label>View3 PLC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_MIS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales MIS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Site_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Site Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sender_Code__c</fullName>
        <label>Sender Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Effective_Date__c</fullName>
        <label>Service Tax Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Required_On_Token_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to indicate whether the ST component of the token amount needs to be collected as part of booking process.
If this is checked unless the entire token amount and service tax is paid, we cant proceed with the booking</description>
        <inlineHelpText>Check to indicate whether the ST component of the token amount needs to be collected as part of booking process.
If this is checked unless the entire token amount and service tax is paid, we cant proceed with the booking</inlineHelpText>
        <label>Service Tax On Token Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Single_Open_Assigned__c</fullName>
        <label>Single- Dependent (Assigned)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Earmarked</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Single- Dependent</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Single_Open_Available__c</fullName>
        <formula>Single_Open_Total__c  - Single_Open_Booked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Single- Dependent (Available)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Single_Open_Booked__c</fullName>
        <label>Single- Dependent (Booked)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Additional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Status__c</field>
            <operation>equals</operation>
            <value>Booked</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Single- Dependent</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Single_Open_Total__c</fullName>
        <label>Single- Dependent (Total)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Additional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Single- Dependent</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Single_car_park_Assigned_c__c</fullName>
        <label>Single - Independent (Assigned)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Earmarked</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Single - Independent</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Single_car_park_Available__c</fullName>
        <formula>Single_car_park_Total_c__c  - Single_car_park_Booked_c__c</formula>
        <label>Single - Independent (Available)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Single_car_park_Booked_c__c</fullName>
        <label>Single - Independent (Booked)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Additional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Status__c</field>
            <operation>equals</operation>
            <value>Booked</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Single - Independent</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Single_car_park_Total_c__c</fullName>
        <label>Single - Independent (Total)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Additional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Single - Independent</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Site_Address_Map_Link__c</fullName>
        <label>Site Address Map Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Site_Code__c</fullName>
        <label>Site Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Assigned__c</fullName>
        <label>Puzzle (Assigned)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Earmarked</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Puzzle</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Stack_Available__c</fullName>
        <formula>Stack_Total__c  - Stack_Booked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puzzle (Available)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stack_Booked__c</fullName>
        <label>Puzzle (Booked)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Additional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Status__c</field>
            <operation>equals</operation>
            <value>Booked</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Puzzle</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Stack_Total__c</fullName>
        <label>Puzzle (Total)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Additional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Puzzle</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Code_Where_Supplied__c</fullName>
        <label>State Code Where Supplied</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TDS_Category_A_c_No_Broker__c</fullName>
        <label>TDS Category A/c. No.(Broker)</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDS_Category_A_c_No_Sub_Broker__c</fullName>
        <label>TDS Category A/c. No.(Sub-Broker)</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tandem_Open_Assigned__c</fullName>
        <label>Stack (Assigned)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Earmarked</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Stack</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tandem_Open_Available__c</fullName>
        <formula>Tandem_Open_Total__c  - Tandem_Open_Booked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stack (Available)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tandem_Open_Booked__c</fullName>
        <label>Stack (Booked)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Additional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Status__c</field>
            <operation>equals</operation>
            <value>Booked</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Stack</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tandem_Open_Total__c</fullName>
        <label>Stack (Total)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Additional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Stack</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tandem_car_park_Assigned__c</fullName>
        <label>Dependable Stack (Assigned)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Earmarked</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Dependable-Stack</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tandem_car_park_Available__c</fullName>
        <formula>Tandem_car_park_Total_c__c  - Tandem_car_park_Booked_c__c</formula>
        <label>Dependable Stack (Available)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tandem_car_park_Booked_c__c</fullName>
        <label>Dependable Stack (Booked)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Additional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Status__c</field>
            <operation>equals</operation>
            <value>Booked</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Dependable-Stack</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tandem_car_park_Total_c__c</fullName>
        <label>Dependable Stack (Total)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Additional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Dependable-Stack</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tearms_and_Conditions__c</fullName>
        <label>Terms and Conditions Regular</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Terms_and_Condtitions_New__c</fullName>
        <label>Terms and Conditions Subvention</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Thank_You_Text__c</fullName>
        <label>Thank You Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Token_Amount__c</fullName>
        <label>Token Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Max_Discount_Allowed__c</fullName>
        <description>Max discount allowed on this project. The rate is in Per Sq.Ft</description>
        <inlineHelpText>Max discount allowed on this project. The rate is in Per Sq.Ft</inlineHelpText>
        <label>Total Max Discount Allowed (Per Sq.Ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Two_Wheeler_Booked__c</fullName>
        <label>Two Wheeler (Booked)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Additional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Two Wheeler</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Status__c</field>
            <operation>equals</operation>
            <value>Booked</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Two_Wheeler_Total__c</fullName>
        <label>Two Wheeler (Total)</label>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Category__c</field>
            <operation>equals</operation>
            <value>Additional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Car_Parking_Charge__c.Parking__c</field>
            <operation>equals</operation>
            <value>Two Wheeler</value>
        </summaryFilterItems>
        <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Two_wheeler_Available__c</fullName>
        <formula>Two_Wheeler_Total__c  -  Two_Wheeler_Booked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Two wheeler (Available)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Structure_Status__c</fullName>
        <label>Unit Structure Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View_Cost_Sheet_Page__c</fullName>
        <label>View Cost Sheet Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Confirmed_Reminder__c</fullName>
        <label>Visit Confirmed Reminder</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project_Code__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>View_Cost_Sheet_Page__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BankReceiptMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Integrate_with_FA__c == TRUE, ISBLANK(  Bank_Receipts__c ))</errorConditionFormula>
        <errorDisplayField>Bank_Receipts__c</errorDisplayField>
        <errorMessage>Please Fill Bank Receipt</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Value_Entering_in_Discount_Value</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(ISPICKVAL(Discount_to_be_given_On_Timely_Payment__c, &apos;As Amount&apos;),ISPICKVAL(Discount_to_be_given_On_Timely_Payment__c, &apos;As Percentage Installments&apos;)) ,  ISBLANK(Discount_Value__c)  )</errorConditionFormula>
        <errorDisplayField>Discount_Value__c</errorDisplayField>
        <errorMessage>Please Enter Value in Discount Value after selecting PickList Value of Discount to be given on Timely Payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Value_Entering_in_Narration</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(ISPICKVAL(Discount_to_be_given_On_Timely_Payment__c, &apos;As Amount&apos;),ISPICKVAL(Discount_to_be_given_On_Timely_Payment__c, &apos;As Percentage Installments&apos;)) , ISBLANK( Narration__c ) )</errorConditionFormula>
        <errorDisplayField>Narration__c</errorDisplayField>
        <errorMessage>Please Enter Value in Narration(To be Printed On Receipt) after selecting PickList Value of Discount to be given on Timely Payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CashReceiptMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Integrate_with_FA__c == TRUE, ISBLANK( Cash_Receipts__c ))</errorConditionFormula>
        <errorDisplayField>Cash_Receipts__c</errorDisplayField>
        <errorMessage>Please fill Cash Receipt</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChaequePaymentsMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Integrate_with_FA__c == TRUE, ISBLANK(  Cheque_Payments__c ))</errorConditionFormula>
        <errorDisplayField>Cheque_Payments__c</errorDisplayField>
        <errorMessage>Please Fill Cheque Payments Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChkValueDivisionCode</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Integrate_with_FA__c == TRUE, ISBLANK( Division_Code__c))</errorConditionFormula>
        <errorDisplayField>Division_Code__c</errorDisplayField>
        <errorMessage>Please fill Division Code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DefaultBankAccountNo</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Integrate_with_FA__c == TRUE, ISBLANK(  Default_Bank_A_c_No__c ))</errorConditionFormula>
        <errorDisplayField>Default_Bank_A_c_No__c</errorDisplayField>
        <errorMessage>Please fill Default Bank A/C No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DefaultCashAccountNo</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Integrate_with_FA__c == TRUE, ISBLANK(  Default_Cash_A_c_No__c ))</errorConditionFormula>
        <errorDisplayField>Default_Cash_A_c_No__c</errorDisplayField>
        <errorMessage>Please Fill Value Default Cash A/C No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discount_Value_Enter_When_None_is_Selec</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL(Discount_to_be_given_On_Timely_Payment__c,  &apos;&apos;) ,  NOT( ISBLANK(Discount_Value__c) ) )</errorConditionFormula>
        <errorDisplayField>Discount_Value__c</errorDisplayField>
        <errorMessage>You cann&apos;t enter in Discount Value as you did not choose any PickList Value of Discount to be given on Timely Payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discount_Value_When_Percentage_Selected</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Discount_to_be_given_On_Timely_Payment__c, &apos;As Percentage Installments&apos;), OR(  Discount_Value__c &lt; 0 , Discount_Value__c &gt; 100))</errorConditionFormula>
        <errorDisplayField>Discount_Value__c</errorDisplayField>
        <errorMessage>Discount should be less than 100 % and not less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interest_Rate_cannot_greater_than_100</fullName>
        <active>true</active>
        <description>When user Enter interest rate greater than 100.</description>
        <errorConditionFormula>RDS_Interest_Rate__c  &gt; 100</errorConditionFormula>
        <errorDisplayField>RDS_Interest_Rate__c</errorDisplayField>
        <errorMessage>Interest Rate Can Not be Greater then the 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JVMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Integrate_with_FA__c == TRUE, ISBLANK( JV__c ))</errorConditionFormula>
        <errorDisplayField>JV__c</errorDisplayField>
        <errorMessage>Please Fill JV value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Length_Count</fullName>
        <active>false</active>
        <errorConditionFormula>LEN(Project_Code__c) !=3</errorConditionFormula>
        <errorDisplayField>Project_Code__c</errorDisplayField>
        <errorMessage>Project Code must be three Digit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Narration_Enter_When_None_is_Selected</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Discount_to_be_given_On_Timely_Payment__c, &apos;&apos;) , NOT( ISBLANK( Narration__c ) ) )</errorConditionFormula>
        <errorMessage>You cann&apos;t enter in Narration(To be Printed On Receipt) as you did not choose any PickList Value of Discount to be given on Timely Payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Start_date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Should not be greater  than today date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_Discount_Option</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Discount_Link_Option__c = true , Edit_Discount_Lumsum__c = true)</errorConditionFormula>
        <errorMessage>You can select only Discount Link Option or Edit Discount Lumsum not both for the same project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>if_Service_tax_Applicable_select_date</fullName>
        <active>false</active>
        <errorConditionFormula>IF(Is_Service_Tax_Applicable__c= true,(ISBLANK( Service_Tax_Effective_Date__c )),  NOT(ISBLANK(  RDS_Short_Name__c) ))</errorConditionFormula>
        <errorDisplayField>Service_Tax_Effective_Date__c</errorDisplayField>
        <errorMessage>You have  check the Service Tax applicable field, fill the Service Tax Effective Date.</errorMessage>
    </validationRules>
</CustomObject>